[package]
name = "authz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
osmosis-test-tube = "16.1.1"
osmosis-std = "0.16.1"
cosmwasm-std = "1.3.1"
prost = "0.11.0"
chrono = "0.4.26"
cw-utils = "1.0.1"
